--- a/Frontend/src/app/components/comment-management/comment-management.component.html
+++ b/Frontend/src/app/components/comment-management/comment-management.component.html
@@ -1,1 +1,34 @@
-<p>comment-management works!</p>
+<div class="relative overflow-x-auto">
+  <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+      <tr>
+        <th scope="col" class="px-6 py-3">Advertiment_Id</th>
+        <th scope="col" class="px-6 py-3">Trasmitter</th>
+        <th scope="col" class="px-6 py-3">Receiver</th>
+        <th scope="col" class="px-6 py-3">Rating</th>
+        <th scope="col" class="px-6 py-3">Content</th>
+        <th scope="col" class="px-6 py-3">Date</th>
+        <th scope="col" class="px-6 py-3">Editar</th>
+        <th scope="col" class="px-6 py-3">Eliminar</th>
+      </tr>
+    </thead>
+    <tbody>
+
+      <tr *ngFor="let comment of comments.data" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+        <td class="px-6 py-4">{{comment.advertisement_id}}</td>
+        <td class="px-6 py-4">{{comment.transmitter }}</td>
+        <td class="px-6 py-4">{{comment.receiver }}</td>
+        <td class="px-6 py-4">{{comment.rating }}</td>
+
+        <td class="px-6 py-4">{{comment.comment }}</td>
+        <td class="px-6 py-4">{{comment.fecha }}</td>
+        <td class="px-6 py-4"> <button type="button"
+            class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Editar</button>
+        </td>
+        <td class="px-6 py-4"><button type="button"
+            class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Eliminar</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
