--- a/Frontend/src/app/components/modificar-anuncio/modificar-anuncio.component.html
+++ b/Frontend/src/app/components/modificar-anuncio/modificar-anuncio.component.html
@@ -1,6 +1,6 @@
 <div class="max-w-md mx-auto bg-white shadow-md rounded-md p-6 dark:bg-gray-800">
   <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4">Modificar Anuncio</h2>
-  <form *ngIf="advertisement" (submit)="updateAdvertisement()">
+  <form *ngIf="advertisement" (submit)="confirmarActualizacion()">
     <!-- Email -->
     <div class="relative z-0 w-full mb-5 group">
       <!-- Aquí he añadido la clase 'mb-4' -->
