--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -8,8 +8,7 @@
 
       <div class="p-4 md:p-12 text-center lg:text-left">
         <div class="w-full lg:w-2/5 flex justify-center items-center mb-4">
-          <img [src]="userData.img" class="rounded-none lg:rounded-lg shadow-2xl block lg:hidden h-48 w-auto mb-4">
-          <img [src]="userData.img" class="rounded-none lg:rounded-lg shadow-2xl hidden lg:block h-auto w-48 mb-4">
+          <img [src]="userData.img" alt="Profile Image">
         </div>
         <h1 class="text-3xl font-bold pt-8 lg:pt-0">Your name</h1>
         <input type="text" id="username"
@@ -42,15 +41,24 @@
         </p>
         <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start">
           <i class="fas fa-image text-green-700 pr-4"></i>
-          Image  
+          Image
           <input type="file" accept="image/*" (change)="onFileSelected($event)">
         </p>
-        
+
         <div class="pt-12 pb-8">
           <button (click)="saveChanges()"
             class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
             Save
           </button>
+          <label class="flex items-center">
+            <input checked id="green-checkbox" type="checkbox" [(ngModel)]="deleteCheckbox" (change)="updateDeleteButtonClass()" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+            Delete
+          </label>
+
+          <button type="button" (click)="deleteUser()" [class]="deleteButtonColor + ' text-white focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900'"
+          [disabled]="!deleteCheckbox">Eliminar</button>
+
+
         </div>
 
       </div>
