--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,22 +1,11 @@
-<div
-  class="bg-gray-100 border border-transparent focus-within:border-blue-500 flex px-6 rounded-full h-9 lg:w-2/4 mt-3 mx-auto max-lg:mt-6">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192.904 192.904" width="16px"
-    class="fill-gray-600 mr-3 rotate-90">
-    <path
-      d="m190.707 180.101-47.078-47.077c11.702-14.072 18.752-32.142 18.752-51.831C162.381 36.423 125.959 0 81.191 0 36.422 0 0 36.423 0 81.193c0 44.767 36.422 81.187 81.191 81.187 19.688 0 37.759-7.049 51.831-18.751l47.079 47.078a7.474 7.474 0 0 0 5.303 2.197 7.498 7.498 0 0 0 5.303-12.803zM15 81.193C15 44.694 44.693 15 81.191 15c36.497 0 66.189 29.694 66.189 66.193 0 36.496-29.692 66.187-66.189 66.187C44.693 147.38 15 117.689 15 81.193z">
-    </path>
-  </svg>
-  <input type='email' placeholder='Search...'
-    class="w-full outline-none bg-transparent text-gray-600 font-semibold text-[15px]" />
-</div>
-<br>
-
-
 <div class="antialiased text-gray-900">
   <div class="flex flex-wrap -mx-4">
     <ng-container *ngFor="let advertisement of advertisements.data">
       <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/3 px-4 mb-8">
-        <div class="bg-white rounded-lg overflow-hidden shadow-2xl">
+        <div class="bg-white rounded-lg overflow-hidden shadow-2xl relative"> <!-- Agregamos relative -->
+          <!-- Agregamos el botón aquí -->
+          <button class="absolute top-0 right-0 m-4 bg-blue-500 text-white px-2 py-1 rounded"
+            (click)="openForm(advertisement.id)">Open Form</button>
           <ng-container *ngFor="let user of users.data">
             <div *ngIf="user.id === advertisement.user_id">
               <a [routerLink]="['/advertisement', advertisement.id]" (click)="createCookie(advertisement.id)">
@@ -57,5 +46,20 @@
         </div>
       </div>
     </ng-container>
+    <!-- Elimina este bloque de modal -->
   </div>
 </div>
+
+<!-- Mueve este bloque de modal fuera del contenedor anterior -->
+<div id="myModal" [ngClass]="{'hidden': !showModal}" class="fixed inset-0 flex items-center justify-center">
+  <div class="bg-gray-500 bg-opacity-75 fixed inset-0"></div>
+  <div class="bg-white p-8 rounded-lg relative z-10">
+    <form>
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" class="border rounded px-2 py-1">
+      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded mt-4">Submit</button>
+    </form>
+    <button (click)="closeForm()" class="absolute top-0 right-0 m-2 bg-red-500 text-white px-2 py-1 rounded-full border border-red-600">&times;</button>
+  </div>
+</div>
+
