--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -54,9 +54,9 @@
 <div id="myModal" [ngClass]="{'hidden': !showModal}" class="fixed inset-0 flex items-center justify-center">
   <div class="bg-gray-500 bg-opacity-75 fixed inset-0"></div>
   <div class="bg-white p-8 rounded-lg relative z-10">
-    <form>
+    <form (submit)="createFavoriteList()"> <!-- Llama al método createFavoriteList al enviar el formulario -->
       <label for="name">Name:</label>
-      <input type="text" id="name" name="name" class="border rounded px-2 py-1">
+      <input type="text" id="name" name="name" class="border rounded px-2 py-1" [(ngModel)]="newFavoriteListName">
       <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded mt-4">Submit</button>
     </form>
     <button (click)="closeForm()" class="absolute top-0 right-0 m-2 bg-red-500 text-white px-2 py-1 rounded-full border border-red-600">&times;</button>
