--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -4,8 +4,10 @@
       <div class="w-full sm:w-1/2 md:w-1/3 lg:w-1/3 xl:w-1/3 px-4 mb-8">
         <div class="bg-white rounded-lg overflow-hidden shadow-2xl relative"> <!-- Agregamos relative -->
           <!-- Agregamos el botón aquí -->
-          <button class="absolute top-0 right-0 m-4 bg-blue-500 text-white px-2 py-1 rounded"
-            (click)="openForm(advertisement.id)">Open Form</button>
+          <button class="absolute top-0 right-0 m-4 bg-red-500 text-white px-2 py-1 rounded"
+          (click)="openForm(advertisement.id)">
+          <i class="fas fa-heart"></i> <!-- Ícono de corazón -->
+        </button>
           <ng-container *ngFor="let user of users.data">
             <div *ngIf="user.id === advertisement.user_id">
               <a [routerLink]="['/advertisement', advertisement.id]" (click)="createCookie(advertisement.id)">
@@ -46,7 +48,6 @@
         </div>
       </div>
     </ng-container>
-    <!-- Elimina este bloque de modal -->
   </div>
 </div>
 
@@ -54,10 +55,20 @@
 <div id="myModal" [ngClass]="{'hidden': !showModal}" class="fixed inset-0 flex items-center justify-center">
   <div class="bg-gray-500 bg-opacity-75 fixed inset-0"></div>
   <div class="bg-white p-8 rounded-lg relative z-10">
+    <h2 class="text-lg font-semibold mb-4">Add to Favorite List</h2>
     <form (submit)="createFavoriteList()"> <!-- Llama al método createFavoriteList al enviar el formulario -->
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" class="border rounded px-2 py-1" [(ngModel)]="newFavoriteListName">
-      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded mt-4">Submit</button>
+      <div class="mb-4">
+        <label for="favoriteList">Choose or Create New:</label>
+        <select id="favoriteList" name="favoriteList" class="border rounded px-2 py-1" [(ngModel)]="selectedFavoriteList">
+          <option value="">Select a Favorite List</option>
+          <option *ngFor="let list of favoriteLists.data" [value]="list.id">{{ list.name }}</option>
+        </select>
+      </div>
+      <div class="mb-4">
+        <label for="newListName">Or Create New List:</label>
+        <input type="text" id="newListName" name="newListName" class="border rounded px-2 py-1" [(ngModel)]="newFavoriteListName">
+      </div>
+      <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded">Add</button>
     </form>
     <button (click)="closeForm()" class="absolute top-0 right-0 m-2 bg-red-500 text-white px-2 py-1 rounded-full border border-red-600">&times;</button>
   </div>
