--- a/Frontend/src/app/components/advertisement-management/advertisement-management.component.html
+++ b/Frontend/src/app/components/advertisement-management/advertisement-management.component.html
@@ -1,38 +1,42 @@
 <div class="relative overflow-x-auto">
   <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-      <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-          <tr>
-              <th scope="col" class="px-6 py-3">Profesor</th>
-              <th scope="col" class="px-6 py-3">Lenguaje</th>
-              <th scope="col" class="px-6 py-3">Titulo</th>
-              <th scope="col" class="px-6 py-3">Tipo de clase</th>
-              <th scope="col" class="px-6 py-3">Sobre el</th>
-              <th scope="col" class="px-6 py-3">Descripcion</th>
-              <th scope="col" class="px-6 py-3">Precio/hora</th>
-              <th scope="col" class="px-6 py-3">Disponibilidad</th>
-              <th scope="col" class="px-6 py-3">Experiencia</th>
-              <th scope="col" class="px-6 py-3">Editar</th>
-              <th scope="col" class="px-6 py-3">Eliminar</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr *ngFor="let advertisement of advertisements.data" class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-              <td class="px-6 py-4">{{advertisement.user_id}}</td>
-              <td class="px-6 py-4">{{ advertisement.programmingLanguage_id }}</td>
-              <td class="px-6 py-4">{{ advertisement.title }}</td>
-              <td class="px-6 py-4">{{ advertisement.class }}</td>
-              <td class="px-6 py-4">{{ advertisement.about_me }}</td>
-              <td class="px-6 py-4">{{ advertisement.description }}</td>
-              <td class="px-6 py-4">{{ advertisement.price_hour }}</td>
-              <td class="px-6 py-4">{{ advertisement.disponibility }}</td>
-              <td class="px-6 py-4">{{ advertisement.experience }}</td>
-              <td class="px-6 py-4"> <button type="button"
-                      class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Editar</button>
-              </td>
-              <td class="px-6 py-4"><button type="button"
-                      class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Eliminar</button>
-              </td>
-          </tr>
-      </tbody>
+    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+      <tr>
+        <th scope="col" class="px-6 py-3">Profesor</th>
+        <th scope="col" class="px-6 py-3">Lenguaje</th>
+        <th scope="col" class="px-6 py-3">Titulo</th>
+        <th scope="col" class="px-6 py-3">Tipo de clase</th>
+        <th scope="col" class="px-6 py-3">Sobre el</th>
+        <th scope="col" class="px-6 py-3">Descripcion</th>
+        <th scope="col" class="px-6 py-3">Precio/hora</th>
+        <th scope="col" class="px-6 py-3">Disponibilidad</th>
+        <th scope="col" class="px-6 py-3">Experiencia</th>
+        <th scope="col" class="px-6 py-3">Editar</th>
+        <th scope="col" class="px-6 py-3">Eliminar</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let advertisement of advertisements.data"
+        class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+        <td class="px-6 py-4">{{advertisement.user_id}}</td>
+        <td class="px-6 py-4">{{ advertisement.programmingLanguage_id }}</td>
+        <td class="px-6 py-4">{{ advertisement.title }}</td>
+        <td class="px-6 py-4">{{ advertisement.class }}</td>
+        <td class="px-6 py-4">{{ advertisement.about_me }}</td>
+        <td class="px-6 py-4">{{ advertisement.description }}</td>
+        <td class="px-6 py-4">{{ advertisement.price_hour }}</td>
+        <td class="px-6 py-4">{{ advertisement.disponibility }}</td>
+        <td class="px-6 py-4">{{ advertisement.experience }}</td>
+        <td class="px-6 py-4"> <a [routerLink]="['/editAdd']" [queryParams]="{ userId: advertisements.id }" class="ml-2">
+            <button type="button"
+              class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Edit</button>
+          </a></td>
+        <td class="px-6 py-4"><button type="button"
+            class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"
+            (click)="eliminarAnuncio(advertisement.id)">
+            Delete
+          </button>
+      </tr>
+    </tbody>
   </table>
 </div>
