--- a/Frontend/src/app/components/comment-management/comment-management.component.html
+++ b/Frontend/src/app/components/comment-management/comment-management.component.html
@@ -8,7 +8,6 @@
         <th scope="col" class="px-6 py-3">Rating</th>
         <th scope="col" class="px-6 py-3">Content</th>
         <th scope="col" class="px-6 py-3">Date</th>
-        <th scope="col" class="px-6 py-3">Editar</th>
         <th scope="col" class="px-6 py-3">Eliminar</th>
       </tr>
     </thead>
@@ -22,11 +21,12 @@
 
         <td class="px-6 py-4">{{comment.comment }}</td>
         <td class="px-6 py-4">{{comment.fecha }}</td>
-        <td class="px-6 py-4"> <button type="button"
-            class="focus:outline-none text-white bg-yellow-400 hover:bg-yellow-500 focus:ring-4 focus:ring-yellow-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:focus:ring-yellow-900">Editar</button>
-        </td>
+
         <td class="px-6 py-4"><button type="button"
-            class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Eliminar</button>
+            class="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900"
+            (click)="eliminarComment(comment.id)">
+            Delete
+          </button>
         </td>
       </tr>
     </tbody>
