--- a/Frontend/src/app/components/profile/profile.component.html
+++ b/Frontend/src/app/components/profile/profile.component.html
@@ -1,11 +1,8 @@
 <div class="font-sans antialiased text-gray-900 leading-normal tracking-wider bg-cover">
-
   <div class="max-w-4xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0">
-
     <!-- Main Col -->
     <div id="profile"
       class="w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-lg shadow-2xl bg-white opacity-75 mx-6 lg:mx-0">
-
       <div class="p-4 md:p-12 text-center lg:text-left">
         <div class="w-full lg:w-2/5 flex justify-center items-center mb-4">
           <img [src]="userData.img" alt="Profile Image">
@@ -44,27 +41,24 @@
           Image
           <input type="file" accept="image/*" (change)="onFileSelected($event)">
         </p>
-
         <div class="pt-12 pb-8">
           <button (click)="saveChanges()"
             class="bg-green-700 hover:bg-green-900 text-white font-bold py-2 px-4 rounded-full">
             Save
           </button>
           <label class="flex items-center">
-            <input checked id="green-checkbox" type="checkbox" [(ngModel)]="deleteCheckbox" (change)="updateDeleteButtonClass()" class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+            <input checked id="green-checkbox" type="checkbox" [(ngModel)]="deleteCheckbox"
+              (change)="updateDeleteButtonClass()"
+              class="w-4 h-4 text-green-600 bg-gray-100 border-gray-300 rounded focus:ring-green-500 dark:focus:ring-green-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
             Delete
           </label>
-
-          <button type="button" (click)="deleteUser()" [class]="deleteButtonColor + ' text-white focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900'"
-          [disabled]="!deleteCheckbox">Eliminar</button>
-
-
+          <button type="button" (click)="deleteUser()"
+            [class]="deleteButtonColor + ' text-white focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900'"
+            [disabled]="!deleteCheckbox">Eliminar</button>
         </div>
-
       </div>
-
     </div>
-
   </div>
-
 </div>
+
+
