--- a/Frontend/src/app/components/register/register.component.html
+++ b/Frontend/src/app/components/register/register.component.html
@@ -8,17 +8,20 @@
     </a>
     <div
       class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-      <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
+      <div class="max-w-md mx-auto bg-white shadow-md rounded-md p-6 dark:bg-gray-800">
         <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
           Unete a CodeMasterMentors
         </h1>
         <form class="space-y-4 md:space-y-6" action="#" (ngSubmit)="onSubmit()">
+          <!-- -------------------------------------------------------------------------------------- -->
+
           <!-- Username Field -->
-          <div>
-            <label for="username" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Username</label>
+          <div class="relative z-0 w-full mb-5 group">
             <input type="text" name="username" id="username"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="Username" [(ngModel)]="username" [required]="true" [minlength]="6" #usernameInput="ngModel">
+              class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+              placeholder=" " [(ngModel)]="username" [required]="true" [minlength]="6" #usernameInput="ngModel">
+            <label for="username"
+              class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Username</label>
             <div
               *ngIf="usernameInput.touched && usernameInput.invalid && (usernameInput.errors?.['required'] || usernameInput.errors?.['minlength'])"
               class="text-red-500">
@@ -27,13 +30,16 @@
             </div>
           </div>
 
+          <!-- -------------------------------------------------------------------------------------- -->
+
           <!-- Password Field -->
-          <div>
-            <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Password</label>
-            <input type="password" name="password" id="password" placeholder="••••••••"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              [(ngModel)]="password" required minlength="8" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$"
-              #passwordInput="ngModel">
+          <div class="relative z-0 w-full mb-5 group">
+            <input type="password" name="password" id="password"
+              class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+              placeholder=" " [(ngModel)]="password" required minlength="8"
+              pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" #passwordInput="ngModel">
+            <label for="password"
+              class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Password</label>
             <div
               *ngIf="passwordInput.touched && passwordInput.invalid && (passwordInput.errors?.['required'] || passwordInput.errors?.['minlength'] || passwordInput.errors?.['pattern'])"
               class="text-red-500">
@@ -42,6 +48,8 @@
               <div *ngIf="passwordInput.errors?.['pattern']">Password must contain letters and numbers</div>
             </div>
           </div>
+
+          <!-- -------------------------------------------------------------------------------------- -->
 
           <!-- Role Field -->
           <div>
@@ -56,12 +64,17 @@
             <div *ngIf="roleIdInput.touched && !role_id" class="text-red-500">Role is required</div>
           </div>
 
+          <!-- -------------------------------------------------------------------------------------- -->
+
           <!-- Name Field -->
-          <div>
-            <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
+          <div class="relative z-0 w-full mb-5 group">
             <input type="text" name="name" id="name"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="Name" [(ngModel)]="name" required minlength="3" #nameInput="ngModel">
+              class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+              placeholder=" " [(ngModel)]="name" required minlength="3" #nameInput="ngModel">
+            <label for="name"
+              class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Name</label>
+
+
             <div
               *ngIf="nameInput.touched && nameInput.invalid && (nameInput.errors?.['required'] || nameInput.errors?.['minlength'])"
               class="text-red-500">
@@ -70,13 +83,17 @@
             </div>
           </div>
 
+          <!-- -------------------------------------------------------------------------------------- -->
+
           <!-- Email Field -->
-          <div>
-            <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your email</label>
+          <div class="relative z-0 w-full mb-5 group">
             <input type="email" name="email" id="email"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="name@company.com" [(ngModel)]="email" required
-              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" #emailInput="ngModel">
+              class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+              placeholder=" " [(ngModel)]="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+              #emailInput="ngModel">
+            <label for="email"
+              class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Email</label>
+
             <div
               *ngIf="emailInput.touched && emailInput.invalid && (emailInput.errors?.['required'] || emailInput.errors?.['pattern'])"
               class="text-red-500">
@@ -85,39 +102,73 @@
             </div>
           </div>
 
+          <!-- -------------------------------------------------------------------------------------- -->
+
+          <!-- Username -->
+          <div class="relative z-0 w-full mb-5 group">
+            <input type="text" [(ngModel)]="username" name="name" id="name"
+              class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+              placeholder=" " required />
+            <label for="name"
+              class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Title</label>
+          </div>
+
+          <!-- -------------------------------------------------------------------------------------- -->
+
           <!-- Born Date Field -->
-          <div>
-            <label for="born_date" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Date of
-              Birth</label>
+          <div class="relative z-0 w-full mb-5 group">
             <input type="date" name="born_date" id="born_date"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="Date of Birth" [(ngModel)]="born_date" required #bornDateInput="ngModel"
-              (ngModelChange)="validateAge()">
+              class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+              placeholder=" " [(ngModel)]="born_date" required #bornDateInput="ngModel" (ngModelChange)="validateAge()">
+            <label for="bornDate"
+              class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Date
+              of Birth</label>
             <div *ngIf="bornDateInput.touched && !born_date" class="text-red-500">Date of Birth is required</div>
             <div *ngIf="bornDateInput.touched && born_date && !isValidAge" class="text-red-500">You must be at least 14
               years old</div>
           </div>
 
+          <!-- -------------------------------------------------------------------------------------- -->
 
           <!-- Area Field -->
-          <div>
-            <label for="area" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Area</label>
+          <div class="relative z-0 w-full mb-5 group">
             <input type="text" name="area" id="area"
-              class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="Area" [(ngModel)]="area" required #areaInput="ngModel">
+              class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+              placeholder=" " [(ngModel)]="area" required #areaInput="ngModel">
+            <label for="area"
+              class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Area</label>
+
+
             <div *ngIf="areaInput.touched && !area" class="text-red-500">Area is required</div>
           </div>
 
+          <!-- -------------------------------------------------------------------------------------- -->
+
           <!-- Image Upload Field -->
-          <div>
+          <!-- <div>
             <label for="profile_image" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Profile
               Image</label>
             <input type="text" name="profile_image" id="profile_image" accept="image/*"
               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
               [(ngModel)]="img" #profileImageInput="ngModel" placeholder="ImageURL">
+          </div> -->
+
+          <!-- Img -->
+          <div class="relative z-0 w-full mb-5 group flex items-center">
+            <input type="file" accept="image/*" (change)="onFileSelected($event)" class="hidden" id="imageInput">
+            <label for="imageInput" class="cursor-pointer mr-2">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-gray-400 hover:text-gray-600" fill="none"
+                viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
+                </path>
+              </svg>
+            </label>
+            <span class="text-sm text-gray-500">Subir Imagen</span>
           </div>
+          <!-- -------------------------------------------------------------------------------------- -->
+
           <!-- Terms and Conditions -->
-          <div class="flex items-start">
+          <!-- <div class="flex items-start">
             <div class="flex items-center h-5">
               <input id="terms" aria-describedby="terms" type="checkbox"
                 class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-primary-300 dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-primary-600 dark:ring-offset-gray-800"
@@ -128,7 +179,9 @@
                   class="font-medium text-primary-600 hover:underline dark:text-primary-500" href="#">Terms and
                   Conditions</a></label>
             </div>
-          </div>
+          </div> -->
+
+
           <!-- Submit Button -->
           <button type="submit"
             class="w-full text-black bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800 dark:text-white border border-black dark:border-white">Create
@@ -142,4 +195,3 @@
     </div>
   </div>
 </section>
-<div *ngIf="errorMessage" class="text-red-500">{{ errorMessage }}</div>
