Borra relación de Lista Favoritos y advertisement

--- a/Frontend/src/app/components/favourite-list/favourite-list.component.html
+++ b/Frontend/src/app/components/favourite-list/favourite-list.component.html
@@ -8,7 +8,7 @@
       <li *ngFor="let advertisementList of advertisementFavouriteLists.data">
         <ng-container *ngIf="advertisementList.favouriteList_id === favouriteList.id">
           <span>{{ getAdvertisementTitle(advertisementList.advertisement_id) }}</span>
-          <button (click)="deleteAdvertisementFavourite_list(advertisementList.id)">X</button>
+          <button (click)="deleteAdvertisementFavourite(advertisementList)">X</button>
 
         </ng-container>
       </li>
