--- a/Frontend/src/app/components/advertisement/advertisement.component.html
+++ b/Frontend/src/app/components/advertisement/advertisement.component.html
@@ -27,4 +27,5 @@
     <p class="text-gray-700 mb-2">Experiencia: {{ advertisementData.experience }}</p>
   </div>
 
+  <button routerLink="/payment">Contratar</button>
 </div>
