--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Título de tu página</title>
+  <script src="https://js.stripe.com/v3/"></script>
+  <!-- Metadatos de SEO -->
+  <meta name="description" content="Descripción de tu página">
+  <meta name="keywords" content="palabras clave, relevantes, para, tu, página">
+</head>
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="/home" class="flex items-center space-x-3 rtl:space-x-reverse">
