--- a/Frontend/src/app/components/payment/payment.component.html
+++ b/Frontend/src/app/components/payment/payment.component.html
@@ -1,1 +1,5 @@
-<p>payment works!</p>
+<form (ngSubmit)="submitPayment()">
+    <div id="card-element"></div>
+    <button type="submit">Pagar</button>
+  </form>
+  
