--- a/Frontend/src/app/components/add-rating/add-rating.component.html
+++ b/Frontend/src/app/components/add-rating/add-rating.component.html
@@ -1,30 +1,37 @@
 <div class="max-w-md mx-auto bg-white shadow-md rounded-md p-6 dark:bg-gray-800">
-    <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4">Agregar Comentario y Rating</h2>
-    <br>
-    <!-- Formulario para agregar comentario y rating -->
-    <form (ngSubmit)="crearComentario()" #formularioComentario="ngForm">
+  <h2 class="text-2xl font-bold text-gray-900 dark:text-white mb-4">Agregar Comentario y Rating</h2>
+  <br>
+  <!-- Formulario para agregar comentario y rating -->
+  <form (ngSubmit)="crearComentario()" #formularioComentario="ngForm">
 
-      <!-- Comentario -->
-      <div class="relative z-0 w-full mb-5 group">
-        <textarea [(ngModel)]="comment" name="comment" id="comment"
-          class="block resize-none py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-          placeholder="Escribe tu comentario aquí..." required></textarea>
-        <label for="comment"
-          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Comentario</label>
-      </div>
+    <!-- Nombre del receptor -->
+    <div class="mb-5">
+      <label for="user" class="block text-sm font-medium text-gray-700 dark:text-gray-300">Usuario:</label>
+      <input type="text" id="user" name="user" [(ngModel)]="nombreUsuario"
+        class="block w-full mt-1 text-sm text-gray-900 dark:text-white bg-transparent border-b-2 border-gray-300 focus:outline-none focus:border-blue-500 dark:border-gray-600 dark:focus:border-blue-500"
+        readonly disabled>
+    </div>
 
-      <!-- Rating -->
-      <div class="relative z-0 w-full mb-5 group">
-        <input type="number" [(ngModel)]="rating" name="rating" id="rating" min="1" max="5"
-          class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-          placeholder="Rating (1-5)" required />
-        <label for="rating"
-          class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Rating</label>
-      </div>
+    <!-- Comentario -->
+    <div class="relative z-0 w-full mb-5 group">
+      <textarea [(ngModel)]="comment" name="comment" id="comment"
+        class="block resize-none py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+        placeholder="Escribe tu comentario aquí..." required></textarea>
+      <label for="comment"
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Comentario</label>
+    </div>
 
-      <!-- Botón para enviar el formulario -->
-      <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Agregar Comentario</button>
-    </form>
-  </div>
+    <!-- Rating -->
+    <div class="relative z-0 w-full mb-5 group">
+      <input type="number" [(ngModel)]="rating" name="rating" id="rating" min="1" max="5"
+        class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
+        placeholder="Rating (1-5)" required />
+      <label for="rating"
+        class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Rating</label>
+    </div>
 
-
+    <!-- Botón para enviar el formulario -->
+    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Agregar
+      Comentario</button>
+  </form>
+</div>
