--- a/Frontend/src/app/components/advertisement/advertisement.component.html
+++ b/Frontend/src/app/components/advertisement/advertisement.component.html
@@ -13,6 +13,7 @@
               </ng-container>
             </ng-container>
             <p class="text-gray-700">{{ advertisementData.title }}</p>
+            <p class="text-gray-700">{{ advertisementData.user_id }}</p>
 
 
             <div class="mt-6 flex flex-wrap gap-4 justify-center">
