--- a/Frontend/src/app/components/messages/messages.component.html
+++ b/Frontend/src/app/components/messages/messages.component.html
@@ -1,9 +1,16 @@
 <div class="chat-container">
-    <!-- Lista de mensajes -->
-    <div *ngFor="let message of messages" class="message">
-        <div class="sender">{{ message.remitente }}</div>
-        <div class="content">{{ message.content }}</div>
+    <!-- Lista de destinatarios -->
+    <div *ngFor="let recipient of recipients" class="recipient" (click)="loadMessagesForRecipient(recipient.data.id)">
+        <div class="recipient-name">{{ recipient.data.name }}</div>
     </div>
+
+    <!-- Lista de mensajes -->
+    <ng-container *ngFor="let message of messages">
+       
+            <div class="sender">{{ message.senderName }}</div>
+            <div class="content">{{ message.content }}</div>
+        
+    </ng-container>
 
     <!-- Formulario para enviar un nuevo mensaje -->
     <form (submit)="sendMessage($event)">
