--- a/Frontend/src/app/components/messages/messages.component.html
+++ b/Frontend/src/app/components/messages/messages.component.html
@@ -1,26 +1,21 @@
-<div class="comment-container max-w-md mx-auto p-4 border border-gray-300 rounded-lg bg-gray-100">
-
+<div class="chat-container">
   <!-- Lista de destinatarios -->
-  <div *ngFor="let recipient of recipients" class="recipient cursor-pointer p-2 bg-gray-200 rounded-md mb-2"
-    (click)="loadMessagesForRecipient(recipient.data.id)">
-    <div class="recipient-name font-semibold">{{ recipient.data.name }}</div>
+  <div *ngFor="let recipient of recipients" class="recipient" (click)="loadMessagesForRecipient(recipient.data.id)">
+      <div class="recipient-name">{{ recipient.data.name }}</div>
   </div>
 
   <!-- Lista de mensajes -->
-  <div class="message-list">
-    <ng-container *ngFor="let message of messages">
-      <div class="message bg-white p-3 rounded-md mb-3">
-        <div class="sender font-semibold">{{ message.senderName }}</div>
-        <div class="content">{{ message.content }}</div>
+  <ng-container *ngIf="showMessages">
+      <div *ngFor="let message of messages">
+          <div class="sender">{{ message.senderName }}</div>
+          <div class="content">{{ message.content }}</div>
       </div>
-    </ng-container>
-  </div>
 
-  <!-- Formulario para enviar un nuevo mensaje -->
-  <form class="message-form flex items-center" (submit)="sendMessage($event)">
-    <input type="text" class="message-input flex-1 p-2 border border-gray-300 rounded-md mr-2" #messageInput
-      placeholder="Escribe un mensaje...">
-    <button type="submit"
-      class="send-button py-2 px-4 bg-blue-500 text-white font-semibold rounded-md hover:bg-blue-600">Enviar</button>
-  </form>
+      <!-- Formulario para enviar un nuevo mensaje -->
+      <form (submit)="sendMessage($event)">
+          <input type="text" #messageInput placeholder="Escribe un mensaje...">
+          <button type="submit">Enviar</button>
+      </form>
+  </ng-container>
+
 </div>
