Implementada la tabla de ciudades

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -77,7 +77,7 @@
                     </ng-container>
                   </span>
                   <div class="ml-2 text-gray-600 text-xs uppercase font-semibold tracking-wide">
-                    {{user.area}}
+                    {{user.city}}
                   </div>
                 </div>
                 <h4 class="mt-2 font-semibold text-lg leading-tight truncate">{{user.name}}</h4>
