--- a/Frontend/src/app/components/register/register.component.html
+++ b/Frontend/src/app/components/register/register.component.html
@@ -64,6 +64,15 @@
 
           <!-- -------------------------------------------------------------------------------------- -->
 
+
+
+
+          <!-- -------------------------------------------------------------------------------------- -->
+
+
+
+
+
           <!-- Name Field -->
           <div class="relative z-0 w-full mb-5 group">
             <input type="text" name="name" id="name"
@@ -115,17 +124,20 @@
 
           <!-- -------------------------------------------------------------------------------------- -->
 
-          <!-- Area Field -->
-          <div class="relative z-0 w-full mb-5 group">
-            <input type="text" name="area" id="area"
-              class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
-              placeholder=" " [(ngModel)]="area" required #areaInput="ngModel">
-            <label for="area"
-              class="peer-focus:font-medium absolute text-sm text-gray-500 dark:text-gray-400 duration-300 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:start-0 rtl:peer-focus:translate-x-1/4 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">Area</label>
 
-
-            <div *ngIf="areaInput.touched && !area" class="text-red-500">Area is required</div>
+          <!-- City Field -->
+          <div class="mb-4">
+            <label for="city" class="block text-gray-700 font-bold mb-2 dark:text-white">City</label>
+            <select name="city_id" id="city_id" [(ngModel)]="city_id" required #cityInput="ngModel"
+              class="block appearance-none w-full bg-white border border-gray-300 text-gray-700 py-2 px-3 rounded leading-tight focus:outline-none focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:text-gray-200">
+              <option value="" disabled>Select a city</option>
+              <ng-container *ngFor="let city of cities.data">
+                <option>{{ city.name }}</option>
+              </ng-container>
+            </select>
+            <div *ngIf="cityInput.touched && !city_id" class="text-red-500">City is required</div>
           </div>
+
 
           <!-- -------------------------------------------------------------------------------------- -->
 
