--- a/Frontend/src/app/components/edit-user/edit-user.component.html
+++ b/Frontend/src/app/components/edit-user/edit-user.component.html
@@ -36,7 +36,7 @@
 
     <!-- city -->
     <div class="relative z-0 w-full mb-5 group">
-      <input type="city" [(ngModel)]="userData.city" name="city" id="city"
+      <input type="city" [(ngModel)]="userData.city_id" name="city" id="city"
         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer mb-4"
         placeholder=" " required />
       <label for="city"
