--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -18,7 +18,8 @@
           <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
         </div>
         <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
-        <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+        <div
+          class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
           <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
             <div class="sm:flex sm:items-start">
               <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
@@ -27,8 +28,10 @@
                 </h3>
                 <!-- Inputs más pequeños -->
                 <div class="flex justify-between">
-                  <input type="number" [(ngModel)]="minPrice" placeholder="Precio mínimo" class="border rounded px-2 py-1 w-1/2 mr-2">
-                  <input type="number" [(ngModel)]="maxPrice" placeholder="Precio máximo" class="border rounded px-2 py-1 w-1/2">
+                  <input type="number" [(ngModel)]="minPrice" placeholder="Precio mínimo"
+                    class="border rounded px-2 py-1 w-1/2 mr-2">
+                  <input type="number" [(ngModel)]="maxPrice" placeholder="Precio máximo"
+                    class="border rounded px-2 py-1 w-1/2">
                 </div>
                 <div class="flex justify-between mt-4">
                   <button type="button" (click)="applyPriceFilter()"
@@ -76,9 +79,13 @@
                       </ng-container>
                     </ng-container>
                   </span>
-                  <div class="ml-2 text-gray-600 text-xs uppercase font-semibold tracking-wide">
-                    {{user.city}}
-                  </div>
+                  <ng-container *ngFor="let city of cities.data">
+                    <div *ngIf="city.id === user.city_id"
+                      class="ml-2 text-gray-600 text-xs uppercase font-semibold tracking-wide">
+                      {{ city.name }}
+                    </div>
+                  </ng-container>
+
                 </div>
                 <h4 class="mt-2 font-semibold text-lg leading-tight truncate">{{user.name}}</h4>
 
